apps/staging/service-demo-1/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-demo-1
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: service-demo-1
        image: reg.garrytest.com/demo/service-demo-1:tag # {"$imagepolicy": "flux-system:ns-staging-service-demo-1"}
      imagePullSecrets:
      - name: regkey
